--- a/extensions/eclipse-che-theia-git-provisioner/package.json
+++ b/extensions/eclipse-che-theia-git-provisioner/package.json
@@ -20,7 +20,7 @@
       "@eclipse-che/theia-user-preferences-synchronizer": "0.0.1"
     },
     "scripts": {
-      "prepare": "yarn run clean && yarn run build",
+      "prepare": "yarn run --verbose clean && yarn run --verbose build",
       "clean": "rimraf lib",
       "format": "tsfmt -r --useTsfmt ../../configs/tsfmt.json",
       "lint": "tslint -c ../../configs/tslint.json --project tsconfig.json",
