--- a/extensions/eclipse-che-theia-user-preferences/package.json
+++ b/extensions/eclipse-che-theia-user-preferences/package.json
@@ -22,7 +22,7 @@
     "typescript": "latest"
   },
   "scripts": {
-    "prepare": "yarn run clean && yarn run build",
+    "prepare": "yarn run --verbose clean && yarn run --verbose build",
     "clean": "rimraf lib",
     "format": "tsfmt -r --useTsfmt ../../configs/tsfmt.json",
     "lint": "tslint -c ../../configs/tslint.json --project tsconfig.json",
