--- a/extensions/eclipse-che-theia-about/package.json
+++ b/extensions/eclipse-che-theia-about/package.json
@@ -25,11 +25,11 @@
   ],
   "scripts": {
     "setup-build-details": "node ./scripts/generate-about-details.js",
-    "prepare": "yarn run clean && yarn run build",
+    "prepare": "yarn run --verbose clean && yarn run --verbose build",
     "clean": "rimraf lib",
     "format": "tsfmt -r --useTsfmt ../../configs/tsfmt.json",
     "lint": "tslint -c ../../configs/tslint.json --project tsconfig.json",
-    "compile": "yarn run setup-build-details && tsc",
+    "compile": "yarn run --verbose setup-build-details && tsc",
     "build": "concurrently -n \"format,lint,compile\" -c \"red,green,blue\" \"yarn format\" \"yarn lint\" \"yarn compile\"",
     "watch": "tsc -w",
     "publish:next": "yarn publish  --registry=https://registry.npmjs.org/ --no-git-tag-version --new-version 0.0.1-\"$(date +%s)\""
