--- a/extensions/eclipse-che-theia-plugin-ext/package.json
+++ b/extensions/eclipse-che-theia-plugin-ext/package.json
@@ -34,7 +34,7 @@
     "format": "tsfmt -r --useTsfmt ../../configs/tsfmt.json",
     "lint": "tslint -c ../../configs/tslint.json --project tsconfig.json",
     "compile": "tsc",
-    "build": "concurrently -n \"format,lint,compile\" -c \"red,green,blue\" \"yarn format\" \"yarn lint\" \"yarn compile\" && yarn run compileWorker",
+    "build": "concurrently -n \"format,lint,compile\" -c \"red,green,blue\" \"yarn format\" \"yarn lint\" \"yarn compile\" && yarn run --verbose compileWorker",
     "compileWorker": "webpack-cli --config webpack.config.js",
     "watch": "tsc -w"
   },
