--- a/generator/package.json
+++ b/generator/package.json
@@ -44,9 +44,9 @@
     "src"
   ],
   "scripts": {
-    "prepare": "yarn run clean && yarn run build",
+    "prepare": "yarn run --verbose clean && yarn run --verbose build",
     "clean": "rimraf dist",
-    "build": "yarn run compile && yarn run format-code && yarn run tslint-fix && yarn run test",
+    "build": "yarn run --verbose compile && yarn run --verbose format-code && yarn run --verbose tslint-fix && yarn run --verbose test",
     "compile": "tsc && chmod +x dist/index.js",
     "watch": "tsc -w",
     "test": "jest",
@@ -54,7 +54,7 @@
     "format-code": "tsfmt -r",
     "tslint-fix": "tslint --fix --project .",
     "tslint": "tslint --project .",
-    "exe": "yarn run exe:alpine && yarn run exe:mac && yarn run exe:linux",
+    "exe": "yarn run --verbose exe:alpine && yarn run --verbose exe:mac && yarn run --verbose exe:linux",
     "exe:alpine": "rimraf exe/alpine/ && mkdir -p exe/alpine && nexe dist/yargs.js -t alpine-x64-8.12.0 -o exe/alpine/che-theia",
     "exe:mac": "rimraf exe/macOS/ && mkdir -p exe/macOS && nexe dist/yargs.js -t mac-x64-8.12.0 -o exe/macOS/che-theia",
     "exe:linux": "rimraf exe/linux/ && mkdir -p exe/linux && nexe dist/yargs.js -t linux-x64-8.12.0 -o exe/linux/che-theia",
