--- a/plugins/task-plugin/package.json
+++ b/plugins/task-plugin/package.json
@@ -47,7 +47,7 @@
     "@theia/plugin-packager": "latest"
   },
   "scripts": {
-    "prepare": "yarn run clean && yarn run build",
+    "prepare": "yarn run --verbose clean && yarn run --verbose build",
     "clean": "rimraf lib",
     "format": "tsfmt -r --useTsfmt ../../configs/tsfmt.json",
     "watch": "tsc -watch",
