--- a/che-theia-init-sources.yml
+++ b/che-theia-init-sources.yml
@@ -19,4 +19,4 @@ sources:
     - plugins/task-plugin
     - plugins/welcome-plugin
     - plugins/ssh-plugin
-  checkoutTo: ab/scc
+  checkoutTo: master
